# DISTRIBUTED_SYSTEMS

./: README.md
lab_1/examples/python/: udp_client.py  udp_server.py
lab_1/exercises/exercise_2/: udp_client.py
lab_1/exercises/exercise_3/java_udp_server/: settings.gradle
lab_1/exercises/exercise_3/python_udp_client/: udp_client.py
lab_1/exercises/exercise_4/java_server_client/: settings.gradle
lab_1/exercises/exercise_4/python_upd_client/: udp_client.py
lab_1/homework/: ascii_art.py  client.py  server.py
lab_2/examples/: distributed.py
lab_2/exercise/: doodle_api.py
lab_2/homework/backend/: model.py  simple_app.py
lab_2/homework/frontend/src/: App.css  App.jsx  api.js
lab_2/homework/frontend/src/components/: Matches.jsx  (+4 more)
lab_3/Ice/slice/: calculator.ice
lab_4/Serialization/: person-proto.ser  person.proto
lab_4/Serialization/src/: ProtoSerialization.java
lab_4/auction_house/client/: main.py
lab_4/auction_house/client/scripts/: build_proto.ps1
lab_4/auction_house/proto/: auction_house.proto
lab_4/auction_house/server/: build.gradle
lab_4/effective_servants/: generate.sh
lab_4/effective_servants/client/: config.client
lab_4/effective_servants/server/: config.server  pyproject.toml  server.py
lab_4/effective_servants/slice/: TestSystem.ice
lab_4/zadania_3_4_dominik_marek/auction_house/client/: pyproject.toml
lab_5/: docker-compose.yml  lab-ray.ipynb  ray-homework.ipynb
lab_6/rabbitmq-homework/: admin.py  configuration.py  crew.py  message.py  oświadczenie.txt  pyproject.toml  supplier.py
lab_6/rabbitmq-lab/: build.gradle
(+30 files in other folders)
