[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "dmarek03",email = "domarek@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zeroc-ice (>=3.7.10.1,<4.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
