[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["dmarek03 <domarek@student.agh.edu.pl>"]
readme = "README.md"
packages = [{ include = "proto" }]


[tool.poetry.dependencies]
python = ">=3.11"
grpcio = ">=1.71.0,<2.0.0"
grpcio-tools = ">=1.71.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
